# random-quote-generator

./: pyproject.toml
random_quote_generator/: __init__.py  get_quote.py  quotes.py
tests/: test_get_quote.py
