[tool.poetry]
name = "random-quote-generator-2002"
version = "0.1.0"
description = "testdriven.io"
authors = ["Foster Lee <fosterlee@fosterlee.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
